--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,15 +14,16 @@
 }
 
 body {
-  background-image: url("/background.svg");
+  background: url("/background.svg"), $color-9;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
+  background-attachment: fixed;
 }
 
 .main-card {
-  background: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 10px 25px rgba(59, 68, 91, 0.2);
+  background: #3b445b20;
+  box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
   border-radius: 20px;
   height: 100%;
